--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,14 +38,15 @@ jobs:
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
+    steps:
      - name: Checkout repository
        uses: actions/checkout@master
      - name: Download astifact
        uses: actions/download-artifact@master
-    with:
-      name: dist
-      path: dist
-     - name: Deployto Firebase
+       with:
+         name: dist
+         path: dist
+     - name: Deploy to Firebase
        uses: w9jds/firebase-action@master
        with:
          args: deploy --only hosting
