--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,9 @@ jobs:
      - name: Checkout repository
        uses: actions/checkout@master
      - name: Install dependencies
-       run: npm ci
+       run: yarn install
      - name: Build dependencies
-       run: npm run build
+       run: yarn build
      - name: Arhicve production artifact
        uses: actions/upload-artifact@master
        with:
