--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.10",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "yarn-upgrade-all": "^0.7.1"
   }
 }
